// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getBinaryPath > when OS is %p > returns CLI filepath 1`] = `"directory/name"`;

exports[`getBinaryPath > when OS is %p > returns CLI filepath 2`] = `"directory/name"`;

exports[`getBinaryPath > when OS is %p > returns CLI filepath 3`] = `"directory/name.exe"`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 1`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 2`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 3`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-arm64.tgz?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 4`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-amd64.tgz?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 5`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-arm64.zip?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 6`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-amd64.zip?version=0.13.5",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 7`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.14.0",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 8`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-darwin.tgz?version=0.14.0",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 9`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-arm64.tar.zst?version=0.14.0",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 10`] = `
{
  "binaryDirectory": "bin",
  "url": "https://ollama.com/download/ollama-linux-amd64.tar.zst?version=0.14.0",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 11`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-arm64.zip?version=0.14.0",
}
`;

exports[`getDownloadObject > when platform is %p and arch is %p > gets download object 12`] = `
{
  "binaryDirectory": "",
  "url": "https://ollama.com/download/ollama-windows-amd64.zip?version=0.14.0",
}
`;
